--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
+    "@types/luxon": "^3.6.2",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
@@ -56,7 +57,9 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.1",
     "@vinejs/vine": "^3.0.1",
+    "luxon": "^3.6.1",
     "mongoose": "^8.16.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
