--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,27 @@
-version: '3.8'
 services:
   mongo:
-    image: mongo:7.0.18      # última 7.x disponible :contentReference[oaicite:0]{index=0}
+    image: mongo:7.0.18
     container_name: mongo
     restart: always
     ports:
-      - "19132:27017"
+      - "${MONGO_PORT}:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin123
-      MONGO_INITDB_DATABASE: db_cathub
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
     volumes:
       - mongo-data:/data/db
 
   postgres:
-    image: postgres:17.5   # última 16.x disponible :contentReference[oaicite:1]{index=1}
+    image: postgres:17.5
     container_name: postgres
     restart: always
     ports:
-      - "2005:5432"
+      - "${POSTGRES_PORT}:5432"
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin123
-      POSTGRES_DB: db_cathub
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
