--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,35 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  cathub:
+    build: .
+    ports:
+      - "1000:3333"
+    restart: unless-stopped
+    environment:
+      LOG_LEVEL: info
+      APP_KEY: 7Otq2phcA_g__DtX_NQLJZRQN7jxIdFa
+      TZ: UTC
+      PORT: 1000
+      HOST: 0.0.0.0
+      NODE_ENV: development
+      DB_CONNECTION: pg
+      DB_USER: admin
+      DB_PASSWORD: admin123
+      DB_DATABASE: db_cathub
+      DB_HOST: postgres
+      DB_PORT: 5001
+      MONGO_URL: mongodb://admin:admin123@mongo:5000/db_cathub?authSource=admin
+    volumes:
+      - ./:/app
+    networks:
+      - igmar-net
+
+networks:
+  igmar-net:
+    external: true
+
+
 volumes:
   mongo-data:
   postgres-data:
