--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       "
     volumes:
       - ./scripts:/scripts
+    networks:
+      - igmar-net
 
   postgres:
     image: postgres:17.5
@@ -38,6 +40,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - igmar-net
 
   cathub:
     build: .
