--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       DB_DATABASE: ${POSTGRES_DB}
       DB_HOST: postgres
       DB_PORT: 5432
-      MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWOR}D@mongo:27017/${MONGO_DB}?authSource=admin
+      MONGO_URL: ${MONGO_URL}
     volumes:
       - ./:/app
     networks:
