base de datos reformada

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ DB_PORT=5432
 DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=app
+
+# MQTT Configuration
+MQTT_HOST=localhost
+MQTT_PORT=1883
+MQTT_USERNAME=
+MQTT_PASSWORD=
+MQTT_WEBSOCKET_PORT=9001
