--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,20 +34,20 @@ services:
     networks:
       - igmar-net
 
-    mqtt:
-    image: emqx:5.8.3   # última versión estable open source
+  mqtt:
+    image: emqx:5.8.3
     container_name: mqtt-broker
     restart: always
     ports:
-      - "8083:8083"   # WebSocket
-      - "8084:8084"   # WebSocket con TLS
-      - "18083:18083" # Dashboard Web de EMQX
+      - "${SOCKET_PORT}:${SOCKET_PORT}"
+      - "${SOCKET_PORT_TLS}:${SOCKET_PORT_TLS}"
+      - "${DASHBOARD_PORT}:${DASHBOARD_PORT}"
     environment:
-      - EMQX_NODE__NAME=emqx@node1
-      - EMQX_NODE__COOKIE=secretcookie
-      - EMQX_LOG__CONSOLE=debug
-      - EMQX_DASHBOARD__DEFAULT_USER__LOGIN=admin
-      - EMQX_DASHBOARD__DEFAULT_USER__PASSWORD=public
+      - EMQX_NODE__NAME=${EMQX_NODE__NAME}
+      - EMQX_NODE__COOKIE=${EMQX_NODE__COOKIE}
+      - EMQX_LOG__CONSOLE=${EMQX_LOG__CONSOLE}
+      - EMQX_DASHBOARD__DEFAULT_USER__LOGIN=${EMQX_DASHBOARD__DEFAULT_USER__LOGIN}
+      - EMQX_DASHBOARD__DEFAULT_USER__PASSWORD=${EMQX_DASHBOARD__DEFAULT_USER__PASSWORD}
     volumes:
       - emqx-data:/opt/emqx/data
       - emqx-etc:/opt/emqx/etc
