quitando la exposicion de la api por fuera del contenedor y creando volumenes de EMQX

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,8 @@ services:
 
   cathub:
     build: .
-    ports:
-      - "${API_PORT}:${API_PORT}"
+    # ports:
+    #   - "${API_PORT}:${API_PORT}"
     restart: unless-stopped
     environment:
       LOG_LEVEL: info
@@ -92,3 +92,6 @@ volumes:
   mongo-data:
   postgres-data:
   mqtt-data:
+  emqx-data:
+  emqx-etc:
+  emqx-log:
