error de logs al iniciar EMQX arreglando el error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     environment:
       - EMQX_NODE__NAME=${EMQX_NODE__NAME}
       - EMQX_NODE__COOKIE=${EMQX_NODE__COOKIE}
-      - EMQX_LOG__CONSOLE=${EMQX_LOG__CONSOLE}
+      - EMQX_LOG__LEVEL=${EMQX_LOG__LEVEL}
       - EMQX_DASHBOARD_DEFAULT_USER__USERNAME=${EMQX_DASHBOARD_DEFAULT_USER__USERNAME}
       - EMQX_DASHBOARD_DEFAULT_USER__PASSWORD=${EMQX_DASHBOARD_DEFAULT_USER__PASSWORD}
     volumes:
