--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,15 +55,15 @@ services:
   #   networks:
   #     - igmar-net
 
-  mqtt:
+    mqtt:
     image: emqx:5.8.3
     container_name: mqtt-broker
     restart: always
     ports:
-      - "${SOCKET_PORT}:${SOCKET_PORT}"      # normalmente 1883 (si lo necesitas)
-      - "${SOCKET_PORT_TLS}:${SOCKET_PORT_TLS}"  # normalmente 8883 (TLS MQTT)
-      - "${DASHBOARD_PORT}:${DASHBOARD_PORT}"    # dashboard (ej. 18083)
-      - "8884:8884"                         # WSS (WebSocket TLS) - expuesto en 8884
+      - "${SOCKET_PORT}:${SOCKET_PORT}"        # e.g. 1883 (si quieres mantenerlo)
+      - "${SOCKET_PORT_TLS}:${SOCKET_PORT_TLS}"# e.g. 8883 (TLS MQTT)
+      - "${DASHBOARD_PORT}:${DASHBOARD_PORT}"  # dashboard (ej. 18083)
+      - "8884:8884"                            # WSS (WebSocket TLS)
     environment:
       - EMQX_NODE__NAME=${EMQX_NODE__NAME}
       - EMQX_NODE__COOKIE=${EMQX_NODE__COOKIE}
@@ -71,35 +71,29 @@ services:
       - EMQX_DASHBOARD_DEFAULT_USER__USERNAME=${EMQX_DASHBOARD_DEFAULT_USER__USERNAME}
       - EMQX_DASHBOARD_DEFAULT_USER__PASSWORD=${EMQX_DASHBOARD_DEFAULT_USER__PASSWORD}
 
-      # --- Listeners TLS / WSS (forzamos que usen los archivos abajo montados) ---
-      - EMQX_LISTENERS__SSL__EXTERNAL__ENABLED=true
-      - EMQX_LISTENERS__SSL__EXTERNAL__PORT=8883
-      - EMQX_LISTENERS__SSL__EXTERNAL__CERTFILE=/opt/emqx/etc/certs/server.crt
-      - EMQX_LISTENERS__SSL__EXTERNAL__KEYFILE=/opt/emqx/etc/certs/server.key
+      # --- Configurar SSL para el listener por defecto (8883) ---
+      - EMQX_LISTENER__SSL__DEFAULT__SSL_OPTIONS__CERTFILE=/opt/emqx/etc/certs/server.crt
+      - EMQX_LISTENER__SSL__DEFAULT__SSL_OPTIONS__KEYFILE=/opt/emqx/etc/certs/server.key
 
-      - EMQX_LISTENERS__WSS__EXTERNAL__ENABLED=true
-      - EMQX_LISTENERS__WSS__EXTERNAL__PORT=8884
-      - EMQX_LISTENERS__WSS__EXTERNAL__CERTFILE=/opt/emqx/etc/certs/server.crt
-      - EMQX_LISTENERS__WSS__EXTERNAL__KEYFILE=/opt/emqx/etc/certs/server.key
+      # --- Configurar WSS en 8884 ---
+      - EMQX_LISTENER__WSS__EXTERNAL=8884
+      - EMQX_LISTENER__WSS__EXTERNAL__SSL_OPTIONS__CERTFILE=/opt/emqx/etc/certs/server.crt
+      - EMQX_LISTENER__WSS__EXTERNAL__SSL_OPTIONS__KEYFILE=/opt/emqx/etc/certs/server.key
 
-      # --- Desactivar listeners no deseados (ajusta si quieres conservar plain TCP/WS) ---
-      - EMQX_LISTENERS__TCP__EXTERNAL__ENABLED=false
-      - EMQX_LISTENERS__WS__EXTERNAL__ENABLED=false
+      # --- Opcional: desactivar WS no-TLS si no lo quieres (activa solo si necesitas) ---
+      - EMQX_LISTENER__WS__EXTERNAL=0
+
     volumes:
       - emqx-data:/opt/emqx/data
       - emqx-etc:/opt/emqx/etc
       - emqx-log:/opt/emqx/log
 
-      # Montar certificados Let's Encrypt directamente (live son symlinks a archive)
+      # Montar certs Let's Encrypt directamente (siempre prueba primero)
       - /etc/letsencrypt/live/atenasoficial.com/fullchain.pem:/opt/emqx/etc/certs/server.crt:ro
       - /etc/letsencrypt/live/atenasoficial.com/privkey.pem:/opt/emqx/etc/certs/server.key:ro
 
-      # (opcional) si quieres exponer chain/ca explícito:
-      # - /etc/letsencrypt/live/www.atenasoficial.com/chain.pem:/opt/emqx/etc/certs/ca.crt:ro
-
     networks:
       - igmar-net
-
 
   cathub:
     build: .
