--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
     restart: always
     ports:
       - "${SOCKET_PORT}:${SOCKET_PORT}"        # e.g. 1883 (si quieres mantenerlo)
-      - "${SOCKET_PORT_TLS}:${SOCKET_PORT_TLS}" # e.g. 8883 (TLS MQTT)
+      - "${SOCKET_PORT_TLS}:${SOCKET_PORT_TLS}"# e.g. 8883 (TLS MQTT)
       - "${DASHBOARD_PORT}:${DASHBOARD_PORT}"  # dashboard (ej. 18083)
       - "8884:8884"                            # WSS (WebSocket TLS)
     environment:
@@ -71,17 +71,8 @@ services:
       - EMQX_DASHBOARD_DEFAULT_USER__USERNAME=${EMQX_DASHBOARD_DEFAULT_USER__USERNAME}
       - EMQX_DASHBOARD_DEFAULT_USER__PASSWORD=${EMQX_DASHBOARD_DEFAULT_USER__PASSWORD}
 
-      # --- Configurar SSL para el listener por defecto (8883) ---
-      # - EMQX_LISTENER__SSL__DEFAULT__SSL_OPTIONS__CERTFILE=/opt/emqx/etc/certs/server.crt
-      # - EMQX_LISTENER__SSL__DEFAULT__SSL_OPTIONS__KEYFILE=/opt/emqx/etc/certs/server.key
-
-      # --- Configurar WSS en 8884 ---
-      - EMQX_LISTENERS__WSS__DEFAULT__BIND=0.0.0.0:8884
-      - EMQX_LISTENERS__WSS__DEFAULT__SSL__CERTFILE=/etc/letsencrypt/live/atenasoficial.com/fullchain.pem
-      - EMQX_LISTENERS__WSS__DEFAULT__SSL__KEYFILE=/etc/letsencrypt/live/atenasoficial.com/privkey.pem
-
       # --- Opcional: desactivar WS no-TLS si no lo quieres (activa solo si necesitas) ---
-      # - EMQX_LISTENER__WS__EXTERNAL=0
+      - EMQX_LISTENER__WS__EXTERNAL=0
 
     volumes:
       - emqx-data:/opt/emqx/data
@@ -89,8 +80,7 @@ services:
       - emqx-log:/opt/emqx/log
 
       # Montar certs Let's Encrypt directamente (siempre prueba primero)
-      - /etc/letsencrypt/live/atenasoficial.com/fullchain.pem:/opt/emqx/etc/certs/server.crt:ro
-      - /etc/letsencrypt/live/atenasoficial.com/privkey.pem:/opt/emqx/etc/certs/server.key:ro
+      - /opt/emqx-certs:/certs:ro
 
     networks:
       - igmar-net
