--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "mongoose": "^8.16.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "hotHook": {
     "boundaries": [
